--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
     <div class="content" id="home">
         <img src="home.jpg" alt="Home Page Image" class="home-image"> <!-- Add your home page image here -->
         <h2>Computational Nanomaterials Laboratory</h2>
-        <p>The Computational Nanomaterials Lab, under the leadership of Md. Sherajul Islam, works with matter at the smallest sizes to produce materials that have emergent characteristics, which are characterized by new and sometimes unexpected traits resulting from the interactions of numerous entities. We create technologies that improve the quality of human life in the areas of health, energy, sensory augmentation, and self-expression by synthesizing, assembling, combining, and arranging nanoscale building pieces.</p>
+        <p>The Computational Nanomaterials Lab, under the leadership of Md. Sherajul Islam, 
+        works with matter at the smallest sizes to produce materials that have emergent characteristics, 
+            which are characterized by new and sometimes unexpected traits resulting from the interactions 
+            of numerous entities. We create technologies that improve the quality of human life in the areas of health, 
+            energy, sensory augmentation, and self-expression by synthesizing, assembling, 
+            combining, and arranging nanoscale building pieces.</p>
     </div>
     <div class="content" id="research">
         <h2>Research</h2>
