--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <div class="team-member">
             <img src="m2.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Md. Masud Rana<br>Role: Graduated</p>
+        </div>
          <div class="team-member">
             <img src="naim.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Naim Ferdous<br>Role: Graduated</p>
