--- a/index.html
+++ b/index.html
@@ -84,23 +84,23 @@
         <!-- Add publication information with images -->
         <div class="publication">
             <img src="publication-3.jpg" alt="Publication 1" class="publication-image">
-            <p>Title: Research Paper 1<br>Authors: Md. Sherajul Islam et al.<br>Date: July 2023</p>
+            <p>Title: Growth mechanisms of monolayer hexagonal boron nitride (h-BN) on metal surfaces: theoretical perspectives<br>Authors: Md. Sherajul Islam et al., Nanoscale Advances<br>Date: July 2023</p>
         </div>
         <div class="publication">
             <img src="publication-1.jpg" alt="Publication 2" class="publication-image">
-            <p>Title: Research Paper 2<br>Authors: Y. Zamil and Md. Sherajul Islam et al. <br>Date: May 2022</p>
+            <p>Title: Tribo-piezoelectricity in group III nitride bilayers: A density functional theory investigation<br>Authors: Y. Zamil and Md. Sherajul Islam et al., ACS Appl. Mater. Interface <br>Date: May 2022</p>
         </div>
         <div class="publication">
             <img src="publication-4.jpg" alt="Publication 3" class="publication-image">
-            <p>Title: Research Paper 3<br>Authors: M. R. Islam and Md. Sherajul Islam et al. <br>Date: September 2021</p>
+            <p>Title: Superior tunable photocatalytic properties for water splitting in two dimensional GeC/SiC van der Waals heterobilayers<br>Authors: M. R. Islam and Md. Sherajul Islam et al., Scientific reports <br>Date: September 2021</p>
         </div>
         <div class="publication">
             <img src="publication-5.jpg" alt="Publication 4" class="publication-image">
-            <p>Title: Research Paper 4<br>Authors: Md. Sherajul Islam et al. <br>Date: December 2020</p>
+            <p>Title: Exceptional in-plane and interfacial thermal transport in graphene/2D-SiC van der Waals heterostructures<br>Authors: Md. Sherajul Islam et al., Scientific Reports<br>Date: December 2020</p>
        </div>
         <div class="publication">
             <img src="publication-2.jpg" alt="Publication 5" class="publication-image">
-            <p>Title: Research Paper 5<br>Authors: N. Ferdous and Md. Sherajul Islam et al. <br>Date: December 2019</p>
+            <p>Title: Tunable electronic properties in stanene and two dimensional silicon-carbide heterobilayer: A first principles investigation<br>Authors: N. Ferdous and Md. Sherajul Islam et al., AIP Adv.<br>Date: December 2019</p>
        </div>
         <!-- Add more publications as needed -->
     </div>
