--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="content" id="research">
         <h2>Research</h2>
         <p>Update coming soon</p>
-        <img src="researc.jpg" alt="Research Image" class="publication-image"> <!-- Add research image -->
+        <img src="nano.webp" alt="Research Image" class="publication-image"> <!-- Add research image -->
         <!-- Add research information here -->
     </div>
     <div class="content" id="team">
