--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="content" id="research">
         <h2>Research</h2>
-        <p>Update coming soon</p>
+        <p>Our research group focuses on atomistic modeling of nanomaterials using density functional theory, molecular dynamics, and machine learning. His group has contributed significantly to the design and development of novel nanomaterials for nanoelectronic, energy, and quantum information science applications.</p>
         <img src="nano.webp" alt="Research Image" class="publication-image"> <!-- Add research image -->
         <!-- Add research information here -->
     </div>
