--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             energy, sensory augmentation, and self-expression by synthesizing, assembling, 
             combining, and arranging nanoscale building pieces.</p>
     </div>
+    <div class="visitor-count">
+        <?php include 'counter.php'; ?>
+        <p>Total Visitors: <?php echo $visitorCount; ?></p>
+    </div>
     <div class="content" id="research">
         <h2>Research</h2>
         <p>Our research group focuses on atomistic modeling of nanomaterials using density functional theory, molecular dynamics, and machine learning. Our group has contributed significantly to the design and development of novel nanomaterials for nanoelectronic, energy, and quantum information science applications.</p>
