--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             of numerous entities. We create technologies that improve the quality of human life in the areas of health, 
             energy, sensory augmentation, and self-expression by synthesizing, assembling, 
             combining, and arranging nanoscale building pieces.</p>
-        <p id="visitor-count">Visitors: 0</p> 
+        <p id="visitor-count" class="top-left">Visitors: 0</p>
     </div>
     <div class="content" id="research">
         <h2>Research</h2>
