--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             <p>Name: Abu Syed Md. Jannatul Islam<br>Role: PhD Student</p>
         </div>
         <div class="team-member">
+            <img src="syed.jpg" alt="Team Member 2" class="team-member-image">
+            <p>Name: Md. Mosarof Hossain Sarkar<br>Role: Research Associate</p>
+        </div>
+        <div class="team-member">
             <img src="ah.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Ashraful Hossain Howlader<br>Role: Graduated</p>
         </div>
