--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>Name: Abu Syed Md. Jannatul Islam<br>Role: PhD Student</p>
         </div>
         <div class="team-member">
-            <img src="mos.jpg" alt="Team Member 2" class="team-member-image">
+            <img src="mos.jpeg" alt="Team Member 2" class="team-member-image">
             <p>Name: Md. Mosarof Hossain Sarkar<br>Role: Research Associate</p>
         </div>
         <div class="team-member">
