--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <h2>Research</h2>
         <p>Our research group focuses on atomistic modeling of nanomaterials using density functional theory, molecular dynamics, and machine learning. Our group has contributed significantly to the design and development of novel nanomaterials for nanoelectronic, energy, and quantum information science applications.</p>
         <img src="nano.webp" alt="Research Image" class="publication-image"> <!-- Add research image -->
+        <p> Research within our group will create a tag for 
+            2D materials-based van der Waals heterobilayer to produce nanoenergy (proposal 1), growth mechanism of novel 2D materials (proposal 2), developing and characterization of new nanomaterials for water desalination (proposal 3), and developing quantum materials capable of allowing solid-state quantum computing (proposal 4). 
+            Together, these avenues of research will produce novel nanomaterials and an enhanced understanding of their growth mechanisms and diverse applications in real world. </p>
         <!-- Add research information here -->
     </div>
     <div class="content" id="team">
