--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <h2>Research</h2>
         <p>Our research group focuses on atomistic modeling of nanomaterials using density functional theory, molecular dynamics, and machine learning. Our group has contributed significantly to the design and development of novel nanomaterials for nanoelectronic, energy, and quantum information science applications.</p>
         <img src="nano.webp" alt="Research Image" class="publication-image"> <!-- Add research image -->
-        <p> At present, our group is focusing on the following research area:  
-            Developing nano energy 2D materials-based van der Waals heterobilayer to produce nanoenergy<p> 
-            growth mechanism of novel 2D materials (proposal 2), 
-            developing and characterization of new nanomaterials for water desalination (proposal 3), 
-            and developing quantum materials capable of allowing solid-state quantum computing (proposal 4). 
-            Together, these avenues of research will produce novel nanomaterials and an enhanced understanding of their growth mechanisms and diverse applications in real world. </p>
-        <!-- Add research information here -->
+        <p> At present, our group is working on the following research areas:  
+        <p> Nano energy harvesting using 2D materials based technology<p> 
+        <p> Exploring the growth mechanism of novel 2D materials <p>
+        <p> Developing and characterization of new nanomaterials for water desalination <p> 
+        <p> Developing quantum materials capable of allowing solid-state quantum computing<p>
+        <p> Developing novel self-healing polymeric-materials for aerospace applications <p>
+    <!-- Add research information here -->
     </div>
     <div class="content" id="team">
         <h2>Our Team</h2>
