--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="team-member">
             <img src="syed.jpg" alt="Team Member 2" class="team-member-image">
-            <p>Name: Abu Syed Md. Jannatul Islam<br>Role: PhD Student</p>
+            <p>Name: Abu Syed Md. Jannatul Islam<br>Role: PhD Completed September 2024</p>
         </div>
         <div class="team-member">
             <img src="mos.jpeg" alt="Team Member 2" class="team-member-image">
@@ -86,7 +86,11 @@
         <div class="team-member">
             <img src="naim.jpg" alt="Team Member 2" class="team-member-image">
             <p>Name: Shifa Khatun<br>Role: Graduated</p>
-        </div>   
+        </div>  
+        <div class="team-member">
+            <img src="Shahid.jpg" alt="Team Member 2" class="team-member-image">
+            <p>Name: Md. Abu Shahid Chowdhury<br>Role: Rsearch Associate</p>
+        </div>  
         <!-- Add more team members as needed -->
     </div>
         <div class="content" id="publications">
