--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
         <p>Most recent publications from our lab.</p>
         <!-- Add publication information with images -->
         <div class="publication">
+            <img src="Selfhealing.jpg" alt="Publication 1" class="publication-image">
+            <p>Title: Self-Healing and Thermal Transport Behavior in Catalytic Vitrimer-graphene Composite<br>Authors: Md. Sherajul Islam et al., Composites Science and Technology<br>Date: October 2024</p>
+        </div>    
+        <div class="publication">
             <img src="publication-3.jpg" alt="Publication 1" class="publication-image">
             <p>Title: Growth mechanisms of monolayer hexagonal boron nitride (h-BN) on metal surfaces: theoretical perspectives<br>Authors: Md. Sherajul Islam et al., Nanoscale Advances<br>Date: July 2023</p>
         </div>
