--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="#" onclick="showSection('research')">Research</a></li>
             <li><a href="#" onclick="showSection('team')">Team</a></li>
             <li><a href="#" onclick="showSection('publications')">Publications</a></li> <!-- Added Publications link -->
+            <li><a href="#" onclick="showSection('Research Grant')">Research Grants</a></li>
             <li><a href="#" onclick="showSection('contact')">Contact</a></li>
         </ul>
     </nav>
