--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>Our research group focuses on atomistic modeling of nanomaterials using density functional theory, molecular dynamics, and machine learning. Our group has contributed significantly to the design and development of novel nanomaterials for nanoelectronic, energy, and quantum information science applications.</p>
         <img src="nano.webp" alt="Research Image" class="publication-image"> <!-- Add research image -->
         <p> At present, our group is working on the following research areas:  
-        <p> <strong> September 2021Nano energy harvesting using 2D materials based technology</strong>strong><p> 
+        <p> <strong> September 2021Nano energy harvesting using 2D materials based technology</strong><p> 
         <p> Exploring the growth mechanism of novel 2D materials <p>
         <p> Developing and characterization of new nanomaterials for water desalination <p> 
         <p> Developing quantum materials capable of allowing solid-state quantum computing<p>
