--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- Add team member information with images -->
         <div class="team-member">
             <img src="SMN.jpg" alt="Team Member 1" class="team-member-image">
-            <p>Name: Md. Sherajul Islam<br>Role: Principal Investigator</p>
+            <p style="font-size:16px; color:#0000FF; font-weight:bold; font-style:italic;"> Name: Md. Sherajul Islam<br>Role: Principal Investigator</p>
         </div>
         <div class="team-member">
             <img src="syed.jpg" alt="Team Member 2" class="team-member-image">
