--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="team-member">
             <img src="syed.jpg" alt="Team Member 2" class="team-member-image">
-            <p>Name: Abu Syed Md. Jannatul Islam<br>Role: PhD Completed September 2024</p>
+            <p style="font-size:16px; color:#00008B; font-weight:bold;">Name: Abu Syed Md. Jannatul Islam, PhD <br> <span style="color: #8B0000">Role: Co-PI</p>
         </div>
         <div class="team-member">
             <img src="mos.jpeg" alt="Team Member 2" class="team-member-image">
